crates/crane/src/snapshots/crane__typer__tests__typer@comments.crane.snap
---
source: crates/crane/src/typer.rs
expression: typer.type_check_package(package)
input_file: crates/crane/src/snapshot_inputs/comments.crane
---
Ok:
  modules:
    - items:
        - kind: Use
          name:
            name: ""
            span:
              start: 0
              end: 0
        - kind:
            Fn:
              params: []
              return_ty:
                UserDefined:
                  module: "std::prelude"
                  name: ()
              body:
                - kind:
                    Expr:
                      kind:
                        Call:
                          fun:
                            kind:
                              Variable:
                                segments:
                                  - ident:
                                      name: std
                                      span:
                                        start: 4
                                        end: 7
                                  - ident:
                                      name: io
                                      span:
                                        start: 9
                                        end: 11
                                  - ident:
                                      name: println
                                      span:
                                        start: 13
                                        end: 20
                                span:
                                  start: 13
                                  end: 20
                            span:
                              start: 38
                              end: 45
                            ty:
                              UserDefined:
                                module: "?"
                                name: "?"
                          args:
                            - kind:
                                Call:
                                  fun:
                                    kind:
                                      Variable:
                                        segments:
                                          - ident:
                                              name: always_blue
                                              span:
                                                start: 46
                                                end: 57
                                        span:
                                          start: 46
                                          end: 57
                                    span:
                                      start: 46
                                      end: 57
                                    ty:
                                      UserDefined:
                                        module: "?"
                                        name: "?"
                                  args: []
                              span:
                                start: 46
                                end: 57
                              ty:
                                UserDefined:
                                  module: "std::prelude"
                                  name: String
                      span:
                        start: 38
                        end: 45
                      ty:
                        UserDefined:
                          module: "std::prelude"
                          name: ()
                  span:
                    start: 38
                    end: 45
              path:
                segments:
                  - ident:
                      name: main
                      span:
                        start: 25
                        end: 29
                span:
                  start: 25
                  end: 29
          name:
            name: main
            span:
              start: 25
              end: 29
        - kind:
            Fn:
              params: []
              return_ty:
                UserDefined:
                  module: "std::prelude"
                  name: String
              body:
                - kind:
                    Expr:
                      kind:
                        Literal:
                          kind:
                            String: "\"blue\""
                          span:
                            start: 168
                            end: 174
                      span:
                        start: 168
                        end: 174
                      ty:
                        UserDefined:
                          module: "std::prelude"
                          name: String
                  span:
                    start: 168
                    end: 174
              path:
                segments:
                  - ident:
                      name: always_blue
                      span:
                        start: 105
                        end: 116
                span:
                  start: 105
                  end: 116
          name:
            name: always_blue
            span:
              start: 105
              end: 116

