crates/crane/src/snapshots/crane__typer__tests__typer@function_return_types.crane.snap
---
source: crates/crane/src/typer.rs
expression: typer.type_check_module(module)
input_file: crates/crane/src/snapshot_inputs/function_return_types.crane
---
Ok:
  items:
    - kind:
        Fn:
          params: []
          return_ty:
            UserDefined:
              module: "std::prelude"
              name: ()
          body:
            - kind:
                Expr:
                  kind:
                    Call:
                      fun:
                        kind:
                          Variable:
                            name:
                              name: println
                              span:
                                start: 16
                                end: 23
                        span:
                          start: 16
                          end: 23
                        ty:
                          UserDefined:
                            module: "?"
                            name: "?"
                      args:
                        - kind:
                            Call:
                              fun:
                                kind:
                                  Variable:
                                    name:
                                      name: int_to_string
                                      span:
                                        start: 24
                                        end: 37
                                span:
                                  start: 24
                                  end: 37
                                ty:
                                  UserDefined:
                                    module: "?"
                                    name: "?"
                              args:
                                - kind:
                                    Call:
                                      fun:
                                        kind:
                                          Variable:
                                            name:
                                              name: add_10
                                              span:
                                                start: 38
                                                end: 44
                                        span:
                                          start: 38
                                          end: 44
                                        ty:
                                          UserDefined:
                                            module: "?"
                                            name: "?"
                                      args:
                                        - kind:
                                            Literal:
                                              kind:
                                                Integer:
                                                  Unsigned:
                                                    - 5
                                                    - Uint64
                                              span:
                                                start: 45
                                                end: 46
                                          span:
                                            start: 45
                                            end: 46
                                          ty:
                                            UserDefined:
                                              module: "std::prelude"
                                              name: Uint64
                                  span:
                                    start: 38
                                    end: 44
                                  ty:
                                    UserDefined:
                                      module: "std::prelude"
                                      name: Uint64
                          span:
                            start: 24
                            end: 37
                          ty:
                            UserDefined:
                              module: "std::prelude"
                              name: String
                  span:
                    start: 16
                    end: 23
                  ty:
                    UserDefined:
                      module: "std::prelude"
                      name: ()
              span:
                start: 16
                end: 23
      name:
        name: main
        span:
          start: 3
          end: 7
    - kind:
        Fn:
          params:
            - name:
                name: n
                span:
                  start: 63
                  end: 64
              ty:
                UserDefined:
                  module: "std::prelude"
                  name: Uint64
              span:
                start: 63
                end: 64
          return_ty:
            UserDefined:
              module: "std::prelude"
              name: Uint64
          body:
            - kind:
                Expr:
                  kind:
                    Call:
                      fun:
                        kind:
                          Variable:
                            name:
                              name: int_add
                              span:
                                start: 90
                                end: 97
                        span:
                          start: 90
                          end: 97
                        ty:
                          UserDefined:
                            module: "?"
                            name: "?"
                      args:
                        - kind:
                            Variable:
                              name:
                                name: n
                                span:
                                  start: 98
                                  end: 99
                          span:
                            start: 98
                            end: 99
                          ty:
                            UserDefined:
                              module: "std::prelude"
                              name: Uint64
                        - kind:
                            Literal:
                              kind:
                                Integer:
                                  Unsigned:
                                    - 10
                                    - Uint64
                              span:
                                start: 101
                                end: 103
                          span:
                            start: 101
                            end: 103
                          ty:
                            UserDefined:
                              module: "std::prelude"
                              name: Uint64
                  span:
                    start: 90
                    end: 97
                  ty:
                    UserDefined:
                      module: "std::prelude"
                      name: Uint64
              span:
                start: 90
                end: 97
      name:
        name: add_10
        span:
          start: 56
          end: 62

