crates/crane/src/snapshots/crane__typer__tests__typer@functions.crane.snap
---
source: crates/crane/src/typer.rs
expression: typer.type_check_package(package)
input_file: crates/crane/src/snapshot_inputs/functions.crane
---
Ok:
  modules:
    - items:
        - kind: Use
          name:
            name: ""
            span:
              start: 0
              end: 0
        - kind:
            Fn:
              params: []
              return_ty:
                UserDefined:
                  module: "std::prelude"
                  name: ()
              body:
                - kind:
                    Expr:
                      kind:
                        Call:
                          fun:
                            kind:
                              Variable:
                                segments:
                                  - ident:
                                      name: say_hello
                                      span:
                                        start: 42
                                        end: 51
                                span:
                                  start: 42
                                  end: 51
                            span:
                              start: 42
                              end: 51
                            ty:
                              UserDefined:
                                module: "?"
                                name: "?"
                          args: []
                      span:
                        start: 42
                        end: 51
                      ty:
                        UserDefined:
                          module: "std::prelude"
                          name: ()
                  span:
                    start: 42
                    end: 51
                - kind:
                    Expr:
                      kind:
                        Call:
                          fun:
                            kind:
                              Variable:
                                segments:
                                  - ident:
                                      name: say_goodbye
                                      span:
                                        start: 58
                                        end: 69
                                span:
                                  start: 58
                                  end: 69
                            span:
                              start: 58
                              end: 69
                            ty:
                              UserDefined:
                                module: "?"
                                name: "?"
                          args: []
                      span:
                        start: 58
                        end: 69
                      ty:
                        UserDefined:
                          module: "std::prelude"
                          name: ()
                  span:
                    start: 58
                    end: 69
              path:
                segments:
                  - ident:
                      name: main
                      span:
                        start: 29
                        end: 33
                span:
                  start: 29
                  end: 33
          name:
            name: main
            span:
              start: 29
              end: 33
        - kind:
            Fn:
              params: []
              return_ty:
                UserDefined:
                  module: "std::prelude"
                  name: ()
              body:
                - kind:
                    Expr:
                      kind:
                        Call:
                          fun:
                            kind:
                              Variable:
                                segments:
                                  - ident:
                                      name: std
                                      span:
                                        start: 4
                                        end: 7
                                  - ident:
                                      name: io
                                      span:
                                        start: 9
                                        end: 11
                                  - ident:
                                      name: println
                                      span:
                                        start: 13
                                        end: 20
                                span:
                                  start: 13
                                  end: 20
                            span:
                              start: 96
                              end: 103
                            ty:
                              UserDefined:
                                module: "?"
                                name: "?"
                          args:
                            - kind:
                                Literal:
                                  kind:
                                    String: "\"Hello\""
                                  span:
                                    start: 104
                                    end: 111
                              span:
                                start: 104
                                end: 111
                              ty:
                                UserDefined:
                                  module: "std::prelude"
                                  name: String
                      span:
                        start: 96
                        end: 103
                      ty:
                        UserDefined:
                          module: "std::prelude"
                          name: ()
                  span:
                    start: 96
                    end: 103
              path:
                segments:
                  - ident:
                      name: say_hello
                      span:
                        start: 78
                        end: 87
                span:
                  start: 78
                  end: 87
          name:
            name: say_hello
            span:
              start: 78
              end: 87
        - kind:
            Fn:
              params: []
              return_ty:
                UserDefined:
                  module: "std::prelude"
                  name: ()
              body:
                - kind:
                    Expr:
                      kind:
                        Call:
                          fun:
                            kind:
                              Variable:
                                segments:
                                  - ident:
                                      name: std
                                      span:
                                        start: 4
                                        end: 7
                                  - ident:
                                      name: io
                                      span:
                                        start: 9
                                        end: 11
                                  - ident:
                                      name: println
                                      span:
                                        start: 13
                                        end: 20
                                span:
                                  start: 13
                                  end: 20
                            span:
                              start: 139
                              end: 146
                            ty:
                              UserDefined:
                                module: "?"
                                name: "?"
                          args:
                            - kind:
                                Literal:
                                  kind:
                                    String: "\"Goodbye\""
                                  span:
                                    start: 147
                                    end: 156
                              span:
                                start: 147
                                end: 156
                              ty:
                                UserDefined:
                                  module: "std::prelude"
                                  name: String
                      span:
                        start: 139
                        end: 146
                      ty:
                        UserDefined:
                          module: "std::prelude"
                          name: ()
                  span:
                    start: 139
                    end: 146
              path:
                segments:
                  - ident:
                      name: say_goodbye
                      span:
                        start: 119
                        end: 130
                span:
                  start: 119
                  end: 130
          name:
            name: say_goodbye
            span:
              start: 119
              end: 130

